fixing responsive spacing

--- a/src/scss/_main-navigation.scss
+++ b/src/scss/_main-navigation.scss
@@ -245,7 +245,7 @@ body.mobile-nav-open {
 	nav {
 		background-color: $white;
 		flex-flow: column;
-		padding: 20px 30px 10px;
+		padding: 20px 20px 10px;
 		position: fixed;
 		&.active {
 			position: fixed;
